--- a/style_game.css
+++ b/style_game.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
+
+body{
+    user-select: none;
+    background-color: #f1f9ff;
+}
+
 /* caixa do jogo */
 .game{
     position: absolute;
