--- a/style_game.css
+++ b/style_game.css
@@ -1,8 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
+* {
+    padding:0;
+    margin:0;
+    vertical-align:baseline;
+    list-style:none;
+    border:0
+    }
 
 body{
     user-select: none;
     background-color: #f1f9ff;
+    
 }
 
 /* caixa do jogo */
@@ -56,4 +63,53 @@ body{
     cursor: pointer;
     border-radius: 4%;
     font-size: min(4vw, 4vh); 
+}
+
+/* Menu */
+.caixa_menu{
+    position: absolute;
+    width: 100vw;
+    height: 100vh; 
+}
+
+#caixa_das_barras{
+    width: min(8vh, 8vw);
+    height: min(8vh, 8vw);
+    position:absolute;
+    margin: 1%;
+    right:0%;
+    top:0%;
+    filter: blur(0px);
+}
+
+.barras{
+    position:absolute;
+    width: 100%;
+    height: 20%;
+    background-color: #354b5a;
+    border-radius: 10px 20px;
+    margin: auto;
+    opacity: 0.5;
+}
+
+#barra1{
+    top: 0%;
+}
+#barra2{
+    top: 50%;
+    bottom: 50%;
+}
+#barra3{
+    bottom: 0%;
+}
+
+.caixa_opcoes{
+    position: absolute;
+    z-index: 1;
+    width: 0px;
+    height: 0px;
+}
+.OpcoesDeConfiguracoes{
+    font-size: 10em;
+    
 }
