--- a/style_menu.css
+++ b/style_menu.css
@@ -1,25 +1,67 @@
 #navegação_menu{
-    position: absolute;
-    top: 1%;
-    right: 1%;
+    /* display: flex; */
+    display: grid;
+    justify-items: center;
+    align-items: center;
 }
 
 #caixa_icone_menu{
-    background-color: brown;
-    width: 5vw;
-    height: 5vw;
+    width: min(8vh, 8vw);
+    height: min(8vh, 8vw);
+    z-index: 100;
+    position:absolute;
+    margin: 1%;
+    right:1%;
+    top:1%;
+    filter: blur(0px);
+}
+.barras{
+    position:absolute;
+    width: 100%;
+    height: 20%;
+    background-color: #354b5a;
+    border-radius: 10px 20px;
+    margin: auto;
+    opacity: 0.5;
 }
 #barra1{
-
+    top: 0%;
 }
 #barra2{
-
+    top: 50%;
+    bottom: 50%;
 }
 #barra3{
-
+    bottom: 0%;
 }
 
 
 #lista_menu{
-    visibility: hidden;   
+    visibility: hidden;
+    /*  
+    position: absolute;
+    
+    font-size: min(10vh, 10vw);
+    
+    
+    right: 25vw; */
+
+    position: absolute;
+    text-align: center;
+    width: min(100vw, 100vh);
+    height: min(100vw, 100vh);
+    top: 10%; 
+    /* transform: translate(0%, 10vh); */
+    z-index: 99;
+    font-size: min(10vw, 10vh);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode';
+    color: aliceblue;
+    text-shadow: 2px 2px 5px black;
+    
+
+}
+.opcoes_menu{
+    position: relative;
+    top: 12%;
+    padding: 2%;
 }
