--- a/style_menu.css
+++ b/style_menu.css
@@ -54,14 +54,21 @@
     /* transform: translate(0%, 10vh); */
     z-index: 99;
     font-size: min(10vw, 10vh);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode';
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode'; */
     color: aliceblue;
     text-shadow: 2px 2px 5px black;
-    
-
 }
 .opcoes_menu{
     position: relative;
-    top: 12%;
+    top: 6%;
     padding: 2%;
+}
+
+#painel_escuro{
+    width: 100vw;
+    height: calc(100vh + 100px);
+    background-Color: #000000;
+    position: absolute;
+    z-Index: 1;
+    opacity: 0.2;
 }
