--- a/style_menu.css
+++ b/style_menu.css
@@ -1,7 +1,7 @@
 #navegação_menu{
     /* display: flex; */
-    display: grid;
-    justify-items: center;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
@@ -38,14 +38,6 @@
 
 #lista_menu{
     visibility: hidden;
-    /*  
-    position: absolute;
-    
-    font-size: min(10vh, 10vw);
-    
-    
-    right: 25vw; */
-
     position: absolute;
     text-align: center;
     width: min(100vw, 100vh);
@@ -53,15 +45,15 @@
     top: 10%; 
     /* transform: translate(0%, 10vh); */
     z-index: 99;
-    font-size: min(10vw, 10vh);
-    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode'; */
+    font-size: min(9vw, 9vh);
     color: aliceblue;
     text-shadow: 2px 2px 5px black;
 }
 .opcoes_menu{
     position: relative;
-    top: 6%;
+    top: 12%;
     padding: 2%;
+    justify-self: center;
 }
 
 #painel_escuro{
@@ -70,5 +62,5 @@
     background-Color: #000000;
     position: absolute;
     z-Index: 1;
-    opacity: 0.2;
+    opacity: 0.3;
 }
